--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -41,6 +41,10 @@ on init
     write /dev/stune/foreground/schedtune.colocate 0
     write /dev/stune/top-app/schedtune.colocate 1
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
+    
+    # Swap setup
+    write /sys/devices/virtual/block/vbswap0/disksize 2147483648
+
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
 
@@ -497,17 +501,6 @@ on property:sys.boot_completed=1
     # Back to default VM settings
     write /proc/sys/vm/dirty_expire_centisecs 3000
     write /proc/sys/vm/dirty_background_ratio 10
-
-    # Read only one page at a time
-    write /proc/sys/vm/page-cluster 0
-    # Swap more aggressively
-    write /proc/sys/vm/swappiness 100
-    # Set zRAM compression algorithm to LZ4
-    write /sys/block/zram0/comp_algorithm lz4
-    # Enable zRAM data deduplication feature
-    write /sys/block/zram0/use_dedup 1
-    # Mount swap partitions specified in fstab
-    swapon_all /vendor/etc/fstab.zram
     
 # MIUI camera flag
 on property:sys.camera.miui.apk=*
